# rpi-pico-rgb-matrix

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt
src/learn/: CMakeLists.txt  learn.cpp  lwipopts.h
src/rgb_test/: CMakeLists.txt  rgb_test.cpp
